@@ -48,7 +48,7 @@ extern uintnat caml_allocation_policy;    /*        see freelist.c */
 extern uintnat caml_custom_major_ratio;   /* see custom.c */
 extern uintnat caml_custom_minor_ratio;   /* see custom.c */
 extern uintnat caml_custom_minor_max_bsz; /* see custom.c */
-extern uintnat caml_minor_heap_max_wsz;   /* see domain.c */
+extern uintnat caml_minor_heap_wsz;       /* see domain.c */
 
 CAMLprim value caml_gc_quick_stat(value v)
 {
@@ -127,7 +127,7 @@ CAMLprim value caml_gc_get(value v)
   CAMLlocal1 (res);
 
   res = caml_alloc_tuple (11);
-  Store_field (res, 0, Val_long (Caml_state->minor_heap_wsz));  /* s */
+  Store_field (res, 0, Val_long (caml_minor_heap_wsz));         /* s */
   Store_field (res, 2, Val_long (caml_percent_free));           /* o */
   Store_field (res, 3, Val_long (caml_params->verb_gc));        /* v */
   Store_field (res, 5, Val_long (caml_max_stack_wsize));        /* l */
@@ -198,29 +198,12 @@ CAMLprim value caml_gc_set(value v)
 
   /* Minor heap size comes last because it will trigger a minor collection
      (thus invalidating [v]) and it can raise [Out_of_memory]. */
-  newminwsz = caml_norm_minor_heap_size (Long_val (Field (v, 0)));
+  newminwsz = caml_norm_minor_heap_wsize (Long_val (Field (v, 0)));
 
-  if (newminwsz != Caml_state->minor_heap_wsz) {
+  if (newminwsz != caml_minor_heap_wsz) {
     caml_gc_message (0x20, "New minor heap size: %"
                      ARCH_INTNAT_PRINTF_FORMAT "uk words\n", newminwsz / 1024);
-  }
-
-  if (newminwsz > caml_minor_heap_max_wsz) {
-    caml_gc_log ("update minor heap max: %"
-                 ARCH_SIZET_PRINTF_FORMAT "uk words", newminwsz / 1024);
-    caml_update_minor_heap_max(newminwsz);
-  }
-  CAMLassert(newminwsz <= caml_minor_heap_max_wsz);
-  if (newminwsz != Caml_state->minor_heap_wsz) {
-    caml_gc_log ("current minor heap size: %"
-                 ARCH_SIZET_PRINTF_FORMAT "uk words",
-                 Caml_state->minor_heap_wsz / 1024);
-    caml_gc_log ("set minor heap size: %"
-                 ARCH_SIZET_PRINTF_FORMAT "uk words", newminwsz / 1024);
-    /* FIXME: when (newminwsz > caml_minor_heap_max_wsz) and
-       (newminwsz != Caml_state->minor_heap_wsz) are both true,
-       the current domain reallocates its own minor heap twice. */
-    caml_set_minor_heap_size (newminwsz);
+    caml_set_minor_heap_wsz (newminwsz);
   }
 
   CAML_EV_END(EV_EXPLICIT_GC_SET);
@@ -319,8 +302,8 @@ CAMLprim value caml_get_minor_free (value v)
 
 void caml_init_gc (void)
 {
-  caml_minor_heap_max_wsz =
-    caml_norm_minor_heap_size(caml_params->init_minor_heap_wsz);
+  caml_minor_heap_wsz =
+    caml_norm_minor_heap_wsize(caml_params->init_minor_heap_wsz);
 
   caml_max_stack_wsize = caml_params->init_max_stack_wsz;
   caml_fiber_wsz = (Stack_threshold * 2) / sizeof(value);
@@ -339,7 +322,7 @@ void caml_init_gc (void)
   #ifdef NATIVE_CODE
   caml_init_frame_descriptors();
   #endif
-  caml_init_domains(caml_params->init_minor_heap_wsz);
+  caml_init_domains();
 /*
   caml_major_heap_increment = major_incr;
   caml_percent_free = norm_pfree (percent_fr);
